Void crystal and more
- Rinominato il "Void Ore" in "Void Crystal" e cambiato tutte le relative incidenze;
- Aggiunta la directory "textures/item" per le textures;
- Aggiunto il nuovo item "Warden's Larynx" + i suoi modelli e traduzioni (it, en);
- Creata la directory "data" e "recipes" per il crafting del sonic boom;
- Creata la texture per il void crystal.

--- a/src/main/resources/assets/rwrk/lang/en_us.json
+++ b/src/main/resources/assets/rwrk/lang/en_us.json
@@ -1,7 +1,8 @@
 {
   //Items
 
-  "item.rwrk.void_ore": "Void Ore",
+  "item.rwrk.void_crystal": "Void Crystal",
+  "item.rwrk.wardens_larynx": "Warden's Larynx",
 
   //Armour
 
